--- a/.github/workflows/share-on-social.yml
+++ b/.github/workflows/share-on-social.yml
@@ -32,7 +32,7 @@ jobs:
 
       # Install all Python packages needed for LI, FB, and X posting
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r scripts/requirements.txt
 
       - name: Share latest weekly post
         run: python scripts/share_social.py
