--- a/.github/workflows/share-on-social.yml
+++ b/.github/workflows/share-on-social.yml
@@ -1,10 +1,7 @@
 name: Share Weekly Post on Social
 
 on:
-  push:
-    branches: [ main ]
-    paths:
-      - 'content/posts/weekly/**'
+  workflow_dispatch:   # Manual trigger only
 
 jobs:
   share:
@@ -16,10 +13,10 @@ jobs:
       LINKEDIN_OWNER: ${{ secrets.LINKEDIN_OWNER }}
       FB_PAGE_ID: ${{ secrets.FB_PAGE_ID }}
       FB_PAGE_TOKEN: ${{ secrets.FB_PAGE_TOKEN }}
-      X_API_KEY: ${{ secrets.X_API_KEY }}              # NEW — for Twitter/X
-      X_API_SECRET: ${{ secrets.X_API_SECRET }}        # NEW — for Twitter/X
-      X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}    # NEW — for Twitter/X
-      X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}  # NEW — for Twitter/X
+      X_API_KEY: ${{ secrets.X_API_KEY }}              
+      X_API_SECRET: ${{ secrets.X_API_SECRET }}        
+      X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}    
+      X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}  
 
     steps:
       - name: Checkout repo
@@ -30,9 +27,8 @@ jobs:
         with:
           python-version: '3.11'
 
-      # Install all Python packages needed for LI, FB, and X posting
       - name: Install dependencies
-        run: pip install -r scripts/requirements.txt
+        run: pip install -r scripts/requirements.txt   # unified requirements file
 
       - name: Share latest weekly post
         run: python scripts/share_social.py
