Change secrets to vars in share-on-social workflow
Updated environment variables from secrets to vars in the GitHub Actions workflow.

--- a/.github/workflows/share-on-social.yml
+++ b/.github/workflows/share-on-social.yml
@@ -1,22 +1,22 @@
 name: Share Weekly Post on Social
 
 on:
-  workflow_dispatch:   # Manual trigger only
+  workflow_dispatch:
 
 jobs:
   share:
     runs-on: ubuntu-latest
     env:
-      SITE_BASE_URL: ${{ secrets.SITE_BASE_URL }}
+      SITE_BASE_URL: ${{ vars.SITE_BASE_URL }}
       CONTENT_DIR: content/posts/weekly
-      LINKEDIN_TOKEN: ${{ secrets.LINKEDIN_TOKEN }}
-      LINKEDIN_OWNER: ${{ secrets.LINKEDIN_OWNER }}
-      FB_PAGE_ID: ${{ secrets.FB_PAGE_ID }}
-      FB_PAGE_TOKEN: ${{ secrets.FB_PAGE_TOKEN }}
-      X_API_KEY: ${{ secrets.X_API_KEY }}              
-      X_API_SECRET: ${{ secrets.X_API_SECRET }}        
-      X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}    
-      X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}  
+      LINKEDIN_TOKEN: ${{ vars.LINKEDIN_TOKEN }}
+      LINKEDIN_OWNER: ${{ vars.LINKEDIN_OWNER }}
+      FB_PAGE_ID: ${{ vars.FB_PAGE_ID }}
+      FB_PAGE_TOKEN: ${{ vars.FB_PAGE_TOKEN }}
+      X_API_KEY: ${{ vars.X_API_KEY }}
+      X_API_SECRET: ${{ vars.X_API_SECRET }}
+      X_ACCESS_TOKEN: ${{ vars.X_ACCESS_TOKEN }}
+      X_ACCESS_SECRET: ${{ vars.X_ACCESS_SECRET }}
 
     steps:
       - name: Checkout repo
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r scripts/requirements.txt   # unified requirements file
+        run: pip install -r requirements.txt
 
       - name: Share latest weekly post
         run: python scripts/share_social.py
