--- a/.github/workflows/share-on-social.yml
+++ b/.github/workflows/share-on-social.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r scripts/requirements.txt
 
       - name: Share latest weekly post
         run: python scripts/share_social.py
