--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -9,9 +9,13 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-  # Runs hourly to publish scheduled posts
+
+  # Runs at 6 AM and 6 PM UTC every day
   schedule:
-    - cron: '0 * * * *'  # Every hour at minute 0
+  - cron: '0 6,18 * * *'
+  
+  # schedule:
+  #  - cron: '0 * * * *'  # Every hour at minute 0
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
